--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,13 @@
   },
   "require-dev": {
     "10up/wp_mock": "^1.0",
+    "automattic/vipwpcs": "^3.0",
+    "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
     "mockery/mockery": "^1.6",
-    "phpunit/phpunit": "^9.6"
+    "phpstan/phpstan": "^1.10",
+    "phpunit/phpunit": "^9.6",
+    "squizlabs/php_codesniffer": "^3.9",
+    "szepeviktor/phpstan-wordpress": "^1.3"
   },
   "autoload-dev": {
     "psr-4": {
