--- a/react/package.json
+++ b/react/package.json
@@ -15,7 +15,8 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "shepherd.js": "^12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
