--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "18"
+          node-version: "20"
           cache: npm
           cache-dependency-path: react/package-lock.json
 
@@ -83,14 +83,22 @@ jobs:
             npm install
           fi
 
+      - name: TypeScript Check
+        if: hashFiles('react/package.json') != ''
+        run: npm run typecheck
+
       - name: Run ESLint
         if: hashFiles('react/package.json') != ''
-        run: npm run lint --if-present
+        run: npm run lint
 
-      - name: Run Jest
+      - name: Prettier Check
         if: hashFiles('react/package.json') != ''
-        run: npm run test --if-present -- --ci
+        run: npm run format:check
+
+      - name: Run Vitest
+        if: hashFiles('react/package.json') != ''
+        run: npm run test -- --run --coverage
 
       - name: Build frontend
         if: hashFiles('react/package.json') != ''
-        run: npm run build --if-present
+        run: npm run build
