--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
   "scripts": {
     "phpunit": "vendor/bin/phpunit",
     "phpcs": "vendor/bin/phpcs",
-    "phpstan": "php -d memory_limit=1G vendor/bin/phpstan analyse --no-progress"
+    "phpstan": "php -d memory_limit=1G vendor/bin/phpstan analyse --no-progress",
+    "openapi:validate": "php scripts/openapi-validate.php"
   },
   "config": {
     "allow-plugins": {
