--- a/react/package.json
+++ b/react/package.json
@@ -15,6 +15,7 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
+    "generate:types": "openapi-typescript ../docs/openapi.json -o src/types/api.ts",
     "prepare": "cd .. && husky react/.husky"
   },
   "dependencies": {
@@ -50,6 +51,7 @@
     "jsdom": "^26.0.0",
     "lint-staged": "^15.4.1",
     "msw": "^2.7.0",
+    "openapi-typescript": "^7.10.1",
     "postcss": "^8.4.32",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
