--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,14 +107,7 @@ jobs:
 
       - name: Check OpenAPI types are up to date
         if: hashFiles('react/package.json') != ''
-        run: |
-          npm run generate:types
-          if git diff --exit-code src/types/api.ts; then
-            echo "✓ OpenAPI types are up to date"
-          else
-            echo "✗ OpenAPI types are out of date. Run 'npm run generate:types' and commit."
-            exit 1
-          fi
+        run: npm run check:types
 
       - name: TypeScript Check
         if: hashFiles('react/package.json') != ''
