--- a/react/package.json
+++ b/react/package.json
@@ -15,7 +15,7 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "generate:types": "openapi-typescript ../docs/openapi.json -o src/types/api.ts",
+    "generate:types": "openapi-typescript ../docs/openapi.json -o src/types/api.ts && prettier --write src/types/api.ts",
     "check:types": "npm run generate:types && node scripts/check-openapi-types.cjs",
     "prepare": "cd .. && husky react/.husky"
   },
