--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -28,8 +28,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-      "@components": ["components"],
-      "@components/*": ["components/*"],
+      "@components": ["src/components"],
+      "@components/*": ["src/components/*"],
       "@hooks": ["src/hooks"],
       "@hooks/*": ["src/hooks/*"],
       "@stores": ["src/stores"],
@@ -45,6 +45,6 @@
     /* Type definitions */
     "types": ["vitest/globals", "node"]
   },
-  "include": ["src", "components", "tests"],
+  "include": ["src", "tests"],
   "exclude": ["node_modules", "dist", "coverage"]
 }
